[project]
name = "langchain-deepdive"
version = "0.1.0"
description = "Project to explore langchain framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "python-dotenv>=1.2.1",
]
